--- a/src/routes/Board/styles.less
+++ b/src/routes/Board/styles.less
@@ -15,10 +15,11 @@
         background: transparent;
 
         .board-content {
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             padding: 0;
             padding-top: 0;
+            padding-bottom: 40px;
             overflow-y: auto;
             overflow-x: clip;
             overflow-clip-margin: calc(var(--vertical-nav-bar-size) + 2.5rem);
@@ -32,8 +33,6 @@
                     padding: 0 1.5rem; // Support floating card
                     margin: 0;
                     margin-bottom: 2.5rem; // spacing before the next carousel
-                    max-height: calc(100vh - 100px);
-                    overflow: hidden;
                     box-sizing: border-box;
                 }
             }
@@ -63,6 +62,8 @@
 
         .board-content-container {
             .board-content {
+                padding-bottom: calc(70px + env(safe-area-inset-bottom, 0px) + 1rem);
+
                 .board-row {
                     padding: 0;
                     margin-top: 0;
