--- a/src/routes/MetaDetails/StreamsList/styles.less
+++ b/src/routes/MetaDetails/StreamsList/styles.less
@@ -12,6 +12,9 @@
 .streams-list-container {
     display: flex;
     flex-direction: column;
+    height: auto;
+    min-height: 0;
+    padding-bottom: 1.5rem;
 
     .message-container {
         flex: 0 1 auto;
@@ -135,7 +138,7 @@
     }
 
     .streams-container {
-        flex: 1 1 auto;
+        flex: 0 1 auto;
         align-self: stretch;
         margin-top: 1rem;
         padding: 0 1rem;
